#55: process priority for smallest rooms